--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,45 @@
+body {
+  font-family: 'Noto Sans', sans-serif;
+  background-image: url('../images/background/funky-lines.png');
+  text-align: center;
+}
+
+
+#vinceImage{
+  height: 182px;
+}
+
+#caption-text {
+  min-height: 60px;
+  font-weight: bold;
+}
+
+#alreadyGuessed-text {
+  min-height: 40px;
+  margin: 0px 170px 30px 170px;
+  padding: 5px;
+  color: indianred;
+  font-weight: bold;
+
+
+}
+
 #hangman-image {
   width: 200px;
   height: auto;
 }
 
+
 #currentWord-text {
   font-size: 26px;
+  margin-bottom: 60px;
 }
 
 #wins-text {
   color: green;
-  font-weight: bold;
+  text-align: left;
+  padding-left: 23px;
+  font-weight: 600;
 }
 
 #guessesRem-text {
